--- a/config/database.yml
+++ b/config/database.yml
@@ -57,8 +57,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: character-system_test
+  adapter: postgresql
+  database: travis_ci_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
