--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: ruby
+cache: bundler
 rvm:
   - 2.4.0
 services:
   - postgresql
+script:
+  - RAILS_ENV=test bundle exec rake setup --trace
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 notifications:
