--- a/test/fixtures/challenges.yml
+++ b/test/fixtures/challenges.yml
@@ -1,11 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+poor:
+  name: Poor
+  description: You don't have much money :(
+  is_creature_challenge: false
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+junkie:
+   name: Junkie
+   description: You are an addict
+   is_creature_challenge: false
+
+werewolf:
+  name: Werewolf
+  description: You turn into a wolf. Scary.
+  is_creature_challenge: true
