--- a/test/fixtures/questionnaire_items.yml
+++ b/test/fixtures/questionnaire_items.yml
@@ -1,1 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one:
+  question: "what is life"
+  order: 1
+two:
+  question: "wwhat?"
+  order: 2
+  
