Fix the fixture

--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -1,3 +1,4 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 one:
+  name: "unnamed or smthing"
   user: 1
